check_3.out
warning: adapteros-lora-kernel-mtl@0.13.1: Kernel hash: 165822cedec712da19cfcddeb028f7e49d15c5c4f7587e550c180ee704f92ffa
warning: adapteros-lora-kernel-mtl@0.13.1: Kernel aos_kernels.metal not found, skipping
    Checking adapteros-boot v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-boot)
warning: adapteros-lora-mlx-ffi@0.13.1: Found MLX at: /opt/homebrew (0.30.3)
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
warning: adapteros-lora-mlx-ffi@0.13.1: MLX BACKEND: Real C++ FFI (feature 'mlx' enabled)
warning: adapteros-lora-mlx-ffi@0.13.1: MLX version: 0.30.3
warning: adapteros-lora-mlx-ffi@0.13.1: Include path: /opt/homebrew/include
warning: adapteros-lora-mlx-ffi@0.13.1: Library path: /opt/homebrew/lib
warning: adapteros-lora-mlx-ffi@0.13.1: Compatibility probe: PASSED
warning: adapteros-lora-mlx-ffi@0.13.1: =========================================================
    Checking adapteros-lora-mlx-ffi v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-lora-mlx-ffi)
warning: adapteros-lora-kernel-coreml@0.13.1: CoreML bridge compiled successfully
warning: adapteros-lora-kernel-coreml@0.13.1: Swift CoreML bridge compiled successfully
    Checking adapteros-tui v0.2.0 (/Users/star/Dev/adapter-os/crates/adapteros-tui)
    Checking adapteros-benchmarks v0.13.1 (/Users/star/Dev/adapter-os/tests/benchmark)
warning: variant `Network` is never constructed
   --> crates/adapteros-core/src/error_macros.rs:389:9
    |
387 |     enum LocalError {
    |          ---------- variant in this enum
388 |         Parse(String),
389 |         Network(String),
    |         ^^^^^^^
    |
    = note: `LocalError` has a derived impl for the trait `Debug`, but this is intentionally ignored during dead code analysis
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `KmsProvider`
  --> crates/adapteros-crypto/tests/kms_security.rs:12:84
   |
12 | use adapteros_crypto::providers::kms::{KmsProviderType, KmsConfig, KmsCredentials, KmsProvider, KmsManager};
   |                                                                                    ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `adapteros-core` (lib test) generated 1 warning
warning: `adapteros-crypto` (test "kms_security") generated 1 warning
    Checking adapteros-secd v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-secd)
    Checking adapteros-federation v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-federation)
    Checking adapteros-lora-worker v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-lora-worker)
    Checking adapteros-verify v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-verify)
    Checking adapteros-replay v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-replay)
    Checking adapteros-orchestrator v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-orchestrator)
    Checking adapteros-api v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-api)
    Checking adapteros-node v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-node)
    Checking xtask v0.13.1 (/Users/star/Dev/adapter-os/xtask)
    Checking adapteros-server-api v0.4.0 (/Users/star/Dev/adapter-os/crates/adapteros-server-api)
    Checking adapteros-cli v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-cli)
    Checking adapteros-server v0.13.1 (/Users/star/Dev/adapter-os/crates/adapteros-server)
    Checking adapteros-e2e v0.2.0 (/Users/star/Dev/adapter-os/crates/adapteros-e2e)
warning: unused import: `adapteros_server_api::types::ErrorResponse`
 --> crates/adapteros-server-api/tests/chat_session_validation_tests.rs:7:5
  |
7 | use adapteros_server_api::types::ErrorResponse;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `-W unused-imports` implied by `-W unused`
  = help: to override `-W unused` add `#[allow(unused_imports)]`

error[E0308]: mismatched types
  --> crates/adapteros-server-api/tests/models_path_validation_tests.rs:47:9
   |
47 |       let (status, Json(err)) = match load_model(
   |  _________^^^^^^^^^^^^^^^^^^^___-
   | |         |
   | |         expected `ApiError`, found `(_, _)`
48 | |         State(state.clone()),
49 | |         Extension(claims.clone()),
50 | |         Path(model_id.to_string()),
...  |
55 | |         Ok(_) => panic!("expected path-missing error"),
56 | |     };
   | |_____- this expression has type `ApiError`
   |
   = note: expected struct `ApiError`
               found tuple `(_, _)`

error[E0308]: mismatched types
   --> crates/adapteros-server-api/tests/models_path_validation_tests.rs:125:9
    |
125 |       let (status, Json(err)) = match load_model(
    |  _________^^^^^^^^^^^^^^^^^^^___-
    | |         |
    | |         expected `ApiError`, found `(_, _)`
126 | |         State(state.clone()),
127 | |         Extension(claims.clone()),
128 | |         Path(model_id.to_string()),
...   |
133 | |         Ok(_) => panic!("expected forbidden error"),
134 | |     };
    | |_____- this expression has type `ApiError`
    |
    = note: expected struct `ApiError`
                found tuple `(_, _)`

warning: `adapteros-server-api` (test "chat_session_validation_tests") generated 1 warning (run `cargo fix --test "chat_session_validation_tests" -p adapteros-server-api` to apply 1 suggestion)
For more information about this error, try `rustc --explain E0308`.
error: could not compile `adapteros-server-api` (test "models_path_validation_tests") due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
error[E0308]: mismatched types
   --> crates/adapteros-server-api/tests/tenant_isolation_models.rs:307:13
    |
306 |     match result {
    |           ------ this expression has type `Result<axum::Json<ModelStatusResponse>, ApiError>`
307 |         Err((status, _)) => {
    |             ^^^^^^^^^^^ expected `ApiError`, found `(_, _)`
    |
    = note: expected struct `ApiError`
                found tuple `(_, _)`

error[E0308]: mismatched types
   --> crates/adapteros-server-api/tests/tenant_isolation_models.rs:796:13
    |
795 |     match result {
    |           ------ this expression has type `Result<axum::Json<ModelStatusResponse>, ApiError>`
796 |         Err((status, _)) => {
    |             ^^^^^^^^^^^ expected `ApiError`, found `(_, _)`
    |
    = note: expected struct `ApiError`
                found tuple `(_, _)`

error: could not compile `adapteros-server-api` (test "tenant_isolation_models") due to 2 previous errors
